--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -9,15 +9,20 @@
 <div class="row">
 	<div class="col-md-5">
 		<h5>CUSTOMERS:</h5>
-		<hr>
+			<hr>
 		<div class="card card-body">
 			<a class="btn btn-primary  btn-sm btn-block" href="">Create Customer</a>
 			<table class="table table-sm">
 				<tr>
-					<th></th>
 					<th>Customer</th>
-					<th>Orders</th>
+					<th>Phone</th>
 				</tr>
+				{% for customer in customers %}
+					<tr>
+						<td>{{ customer.name }}</td>
+						<td>{{ customer.phone }}</td>
+					</tr>
+				{% endfor %}
 
 			</table>
 		</div>
@@ -31,11 +36,22 @@
 			<table class="table table-sm">
 				<tr>
 					<th>Product</th>
-					<th>Date Orderd</th>
+					<th>Customer</th>
+					<th>Date Ordered</th>
 					<th>Status</th>
 					<th>Update</th>
 					<th>Remove</th>
 				</tr>
+				{% for order in orders %}
+					<tr>
+						<td>{{ order.product }}</td>
+						<td>{{ order.customer }}</td>
+						<td>{{ order.date_created }}</td>
+						<td>{{ order.status }}</td>
+						<td><a class="btn btn-sm btn-info" href="">Update</a></td>
+						<td><a class="btn btn-sm btn-danger" href="">Delete</a></td>
+					</tr>
+				{% endfor %}
 		
 			</table>
 		</div>
