--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -14,11 +14,13 @@
 			<a class="btn btn-primary  btn-sm btn-block" href="">Create Customer</a>
 			<table class="table table-sm">
 				<tr>
+					<th></th>
 					<th>Customer</th>
 					<th>Phone</th>
 				</tr>
 				{% for customer in customers %}
 					<tr>
+						<td><a class="btn btn-sm btn-info" href="{% url 'customer' customer.id %}">View</a></td>
 						<td>{{ customer.name }}</td>
 						<td>{{ customer.phone }}</td>
 					</tr>
@@ -31,8 +33,7 @@
 	<div class="col-md-7">
 		<h5>LAST 5 ORDERS</h5>
 		<hr>
-		<div class="card card-body">
-			<a class="btn btn-primary  btn-sm btn-block" href="">Create Order</a>
+		<div class="card card-body"> 
 			<table class="table table-sm">
 				<tr>
 					<th>Product</th>
@@ -48,8 +49,8 @@
 						<td>{{ order.customer }}</td>
 						<td>{{ order.date_created }}</td>
 						<td>{{ order.status }}</td>
-						<td><a class="btn btn-sm btn-info" href="">Update</a></td>
-						<td><a class="btn btn-sm btn-danger" href="">Delete</a></td>
+						<td><a class="btn btn-sm btn-info" href="{% url 'update_order' order.id %}">Update</a></td>
+						<td><a class="btn btn-sm btn-danger" href="{% url 'delete_order' order.id %}">Delete</a></td>
 					</tr>
 				{% endfor %}
 		
