--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,7 +10,7 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Custlog</a>
+    <a style="font-family:verdana; color: aqua;" class="navbar-brand" href="#"><b>CustLog</b></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -22,6 +22,10 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'products' %}">Products</a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'account' %}">Settings</a>
         </li>
         {% endif %}
       </ul>
